# dbconnector

./: .gitignore  MANIFEST.in  README.md  db_connections_example.yaml  pyproject.toml  requirements.txt  setup.py
dbconnector/: __init__.py  manager.py
dbconnector/config/: constants.py  loader.py
dbconnector/connectors/: __init__.py  base.py  sqlserver.py
dbconnector/core/: base.py  factory.py  mariadb_connector.py  postgresql_connector.py  sqlserver_connector.py
docs/: compilacion.md  solucion_problemas.md  uso_basico.md
