[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dbconnector"
version = "0.1.0"
description = "DB connector factory for SQL Server (pyodbc) with alias-based YAML config"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "ZenThos-Lab", email = "zenthos.lab@gmail.com" }]
dependencies = [
  "pyodbc>=5.2.0",
  "PyYAML>=6.0.2"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ZenThos-Lab/dbconnector"
Source   = "https://github.com/ZenThos-Lab/dbconnector"

[tool.setuptools.packages.find]
where = ["."]
include = ["dbconnector*"]
